--- a/src/pages/TestDigimishka.css
+++ b/src/pages/TestDigimishka.css
@@ -1,19 +1,19 @@
-.App {
+.TestDigimishka {
   text-align: center;
 }
 
-.App-logo {
+.TestDigimishka-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .TestDigimishka-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.TestDigimishka-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.App-link {
+.TestDigimishka-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes TestDigimishka-logo-spin {
   from {
     transform: rotate(0deg);
   }
